--- a/package.json
+++ b/package.json
@@ -1,92 +1,84 @@
 {
-  "name": "FrontGrocery",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/longjiarun/hap.git"
-  },
-  "description": "前端杂货铺",
+  "name": "hap",
+  "version": "2.0.0",
+  "repository": {},
   "main": "gulpfile.js",
   "scripts": {
-    "start": "node hap.server",
-    "server": "node hap.server;",
-    "dev": "gulp dev;",
-    "dev-daily": "gulp dev-test;",
-    "dev-pre": "gulp dev-prepare;",
-    "dev-prod": "gulp dev-product;",
-    "mock-daily": "gulp mock-test;",
-    "mock-pre": "gulp mock-prepare;",
-    "mock-prod": "gulp mock-product;",
-    "daily": "gulp test;",
-    "pre": "gulp prepare;",
-    "prod": "gulp product;",
-    "sprite": "gulp sprite;",
-    "docs": "gulp docs;",
-    "eslint": "gulp eslint;",
-    "csslint": "gulp csslint;"
+    "start": "gulp server --dev",
+    "dev": "gulp dev --dev;",
+    "dev-daily": "gulp dev --dev-daily;",
+    "dev-pre": "gulp dev --dev-pre;",
+    "dev-prod": "gulp dev --dev-prod;",
+    "daily": "gulp --daily;",
+    "pre": "gulp --pre;",
+    "prod": "gulp --prod;",
+    "sprite": "gulp sprite --dev;",
+    "eslint": "gulp eslint --dev;",
+    "csslint": "gulp csslint --dev;"
   },
   "keywords": [
     "gulp",
     "webpack",
-    "component",
     "bower",
+    "component",
+    "react",
+    "vue",
     "hap"
   ],
   "private": true,
   "author": "longjia",
   "license": "MIT",
   "devDependencies": {
-    "antd": "^2.2.0",
     "autoprefixer": "^6.3.5",
     "autoprefixer-loader": "~3.2.0",
     "babel-eslint": "^6.0.0",
-    "babel-loader": "^6.2.7",
-    "babel-plugin-antd": "^0.5.1",
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-runtime": "^6.18.0",
-    "classnames": "^2.2.5",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-runtime": "^6.20.0",
+    "chalk": "^1.1.3",
     "css-loader": "^0.23.1",
     "del": "latest",
-    "docker": "latest",
-    "ejs-compiled-loader": "^2.1.1",
-    "es6-promise": "^4.0.5",
+    "ejs-template-loader": "^2.0.0",
+    "eslint-plugin-html": "^1.7.0",
     "eslint-plugin-react": "^4.2.3",
     "extend": "latest",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fileset": "^2.0.3",
+    "git-rev-sync": "^1.8.0",
     "gulp": "^3.9.1",
     "gulp-concat": "~2.6.0",
+    "gulp-connect": "^5.0.0",
     "gulp-csslint": "^0.2.2",
     "gulp-ejs": "^2.1.1",
     "gulp-eslint": "^2.0.0",
     "gulp-htmlmin": "^2.0.0",
-    "gulp-include-html": "^1.0.11",
     "gulp-less": "~3.0.5",
     "gulp-postcss": "^6.1.0",
     "gulp-replace": "^0.5.4",
-    "gulp-rev": "^7.0.0",
-    "gulp-rev-replace": "^0.4.3",
+    "gulp-sourcemaps": "^1.9.1",
     "gulp-uglify": "^1.5.3",
     "gulp-usemin": "^0.3.22",
     "gulp.spritesmith": "latest",
-    "koa": "~1.1.1",
-    "koa-send": "~3.1.0",
+    "htmlmin-loader": "^1.0.2",
+    "json-loader": "^0.5.4",
     "less-loader": "^2.2.3",
-    "moment": "^2.15.2",
+    "opn": "^4.0.2",
     "postcss-clean": "^1.0.0",
     "postcss-import": "^8.1.0",
     "postcss-loader": "^0.8.2",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^3.0.0",
     "run-sequence": "latest",
     "style-loader": "^0.13.1",
-    "underscore-template-loader": "^0.7.2",
-    "url-loader": "^0.5.7",
     "vinyl-named": "^1.1.0",
-    "warning": "3.0.0",
+    "vue-loader": "10.0.0",
+    "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "2.1.4",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "vue": "2.1.4",
+    "vue-router": "2.1.1"
   }
 }
